Uniform errors and memory leak using Material Previews #56019

Closed
opened 2018-07-17 22:23:07 +02:00 by Antonio Vazquez · 9 comments

Windows 10 64 Bits. - Blender 2.8 branch
NVDIA GTX660
Source compiled with VS2017 at 17/07/2018 22:00

  1. Start blender with: blender.exe --factory-startup --debug
  2. Select default cube.
  3. Select default material tab in properties panel.
  4. Open Preview panel.
  5. Close Blender.

The log here: P753

I have checked that memory leak is only when use preview panel.

Windows 10 64 Bits. - Blender 2.8 branch NVDIA GTX660 Source compiled with VS2017 at 17/07/2018 22:00 1) Start blender with: blender.exe --factory-startup --debug 2) Select default cube. 3) Select default material tab in properties panel. 4) Open Preview panel. 5) Close Blender. The log here: [P753](https://archive.blender.org/developer/P753.txt) I have checked that memory leak is only when use preview panel.
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem I think this one is for you.

Let me know if I can help you.

@fclem I think this one is for you. Let me know if I can help you.

It seems to have happened with a change from today (17th July) because I could reproduce only after updating my local repo with todays commits.

Can you try to bisect this?

It seems to have happened with a change from today (17th July) because I could reproduce only after updating my local repo with todays commits. Can you try to bisect this?
Author
Member

Yes, I'm going to try to find the exact commit.

Yes, I'm going to try to find the exact commit.
Author
Member

The error was introduced in commit 644fadf2f0

The error was introduced in commit 644fadf2f0131f8ecd73da6c994ec8a8d4b0a7d1
Brecht Van Lommel self-assigned this 2018-07-18 17:09:47 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Seems like it was fixed in 057b4a6acf ;)

Seems like it was fixed in 057b4a6acf ;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56019
No description provided.