Fix/workaround T56019: memory leak with preview renders.

I would not expect the order of registration to matter, and ideally we want
to order the engines in the UI menu differently, but this helps for now.